# polymer_dynamics

./: Contour Length and Radius of Gyration.ipynb  LICENSE  Manuscript Table - Lambda DNA samples.ipynb  Manuscript Table - Various length samples.ipynb  Overlap Concentration Overview.ipynb  README.md  Table 1 - lambda DNA 1 to 200, 5x TE.ipynb  main_test.py  pyproject.toml  requirements.txt
polymer_dynamics/: dna_functions.py  fun_plotting.py
tests/: main_test.py  tests.py
